works out some issues in game over logic for test mode, updates messages, places ships in different places for test mode

--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
   </section>
 
   <footer role="contentinfo">
-    <h5><a href="https://en.wikipedia.org/wiki/Battleship_(game)">Learn more about Battleship</a></h5>
-    <h5><a href="https://github.com/lisavogtsf/">by Lisa Vogt</a></h5><h5><a href="https://github.com/lisavogtsf/battleship_js">battleship_js</a></h5>
+    <h5><a href="https://github.com/lisavogtsf/">by Lisa Vogt</a></h5>
+    <h5><a href="https://github.com/lisavogtsf/battleship_js">battleship_js</a></h5>
+    <h5><a href="https://en.wikipedia.org/wiki/Battleship_(game)">Learn more about the game of Battleship</a></h5>
   </footer>
 
 </body>
